fix: headings center aligned and tooltip sizes fixed

--- a/css/style.css
+++ b/css/style.css
@@ -209,3 +209,12 @@ div{
   margin-bottom: 10px;
 }
 
+.info-style {
+  font-size: 18px;
+  color: grey;
+  align-content: start;
+}
+
+.tooltip {
+  font-size: 12px;
+}
